--- a/Flash Chat iOS13/Views/MessageCellTableViewCell.xib
+++ b/Flash Chat iOS13/Views/MessageCellTableViewCell.xib
@@ -9,21 +9,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableCell" rowHeight="101" id="KGk-i7-Jjw" customClass="MessageCellTableViewCell" customModule="Flash_Chat_iOS13" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="331" height="101"/>
+        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableCell" rowHeight="168" id="KGk-i7-Jjw" customClass="MessageCellTableViewCell" customModule="Flash_Chat" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="473" height="168"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="331" height="101"/>
+                <rect key="frame" x="0.0" y="0.0" width="473" height="168"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="uVz-mK-9Lo">
-                        <rect key="frame" x="10" y="10" width="311" height="81"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="uVz-mK-9Lo">
+                        <rect key="frame" x="10" y="10" width="453" height="148"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Friend" translatesAutoresizingMaskIntoConstraints="NO" id="ZDc-yS-uzp">
+                                <rect key="frame" x="0.0" y="54" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="bhQ-vv-2BV"/>
+                                    <constraint firstAttribute="height" constant="40" id="p32-1d-qOu"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M4t-fo-ato">
-                                <rect key="frame" x="0.0" y="0.0" width="210" height="81"/>
+                                <rect key="frame" x="60" y="24" width="333" height="100"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6tb-Ly-zXN">
-                                        <rect key="frame" x="10" y="10" width="190" height="61"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="vjhlbkjgfcukvl" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6tb-Ly-zXN">
+                                        <rect key="frame" x="10" y="10" width="313" height="80"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -31,39 +38,41 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="6tb-Ly-zXN" secondAttribute="trailing" constant="10" id="6vY-l8-ob8"/>
-                                    <constraint firstItem="6tb-Ly-zXN" firstAttribute="leading" secondItem="M4t-fo-ato" secondAttribute="leading" constant="10" id="F65-ka-LjJ"/>
-                                    <constraint firstItem="6tb-Ly-zXN" firstAttribute="top" secondItem="M4t-fo-ato" secondAttribute="top" constant="10" id="Ng0-Ye-s4C"/>
-                                    <constraint firstAttribute="bottom" secondItem="6tb-Ly-zXN" secondAttribute="bottom" constant="10" id="skn-sP-9hj"/>
+                                    <constraint firstAttribute="trailing" secondItem="6tb-Ly-zXN" secondAttribute="trailing" constant="10" id="EkV-Tk-Tae"/>
+                                    <constraint firstAttribute="bottom" secondItem="6tb-Ly-zXN" secondAttribute="bottom" constant="10" id="IMh-6q-zxo"/>
+                                    <constraint firstItem="6tb-Ly-zXN" firstAttribute="leading" secondItem="M4t-fo-ato" secondAttribute="leading" constant="10" id="JVd-vL-mqi"/>
+                                    <constraint firstItem="6tb-Ly-zXN" firstAttribute="top" secondItem="M4t-fo-ato" secondAttribute="top" constant="10" id="kMf-Wo-XGw"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="4ej-Ej-jpl">
-                                <rect key="frame" x="230" y="0.0" width="81" height="81"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="E1J-N0-r4S">
+                                <rect key="frame" x="413" y="54" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="81" id="L3C-cl-pWq"/>
-                                    <constraint firstAttribute="width" constant="81" id="u93-Y1-nNh"/>
+                                    <constraint firstAttribute="width" constant="40" id="Qlz-ds-JVA"/>
+                                    <constraint firstAttribute="height" constant="40" id="y5V-uM-rLh"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="uVz-mK-9Lo" secondAttribute="bottom" constant="10" id="6m1-I3-TC7"/>
-                    <constraint firstAttribute="trailing" secondItem="uVz-mK-9Lo" secondAttribute="trailing" constant="10" id="9t5-ts-qry"/>
-                    <constraint firstItem="uVz-mK-9Lo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Jqq-nm-Pxg"/>
-                    <constraint firstItem="uVz-mK-9Lo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="yT9-yY-w4c"/>
+                    <constraint firstAttribute="trailing" secondItem="uVz-mK-9Lo" secondAttribute="trailing" constant="10" id="6zJ-a1-Xom"/>
+                    <constraint firstItem="uVz-mK-9Lo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Bxa-4v-OFV"/>
+                    <constraint firstAttribute="bottom" secondItem="uVz-mK-9Lo" secondAttribute="bottom" constant="10" id="Zce-6O-1Fx"/>
+                    <constraint firstItem="uVz-mK-9Lo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="paf-OJ-xAl"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="imageAvatar" destination="4ej-Ej-jpl" id="gmx-vw-Duk"/>
+                <outlet property="friendImageAvatar" destination="ZDc-yS-uzp" id="SGW-0M-Oot"/>
+                <outlet property="imageAvatar" destination="E1J-N0-r4S" id="ROf-9X-snm"/>
                 <outlet property="label" destination="6tb-Ly-zXN" id="RoA-GU-u5F"/>
                 <outlet property="messageBuble" destination="M4t-fo-ato" id="GRq-zG-Ght"/>
             </connections>
-            <point key="canvasLocation" x="129.71014492753625" y="163.72767857142856"/>
+            <point key="canvasLocation" x="-84.782608695652186" y="156.69642857142856"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="Friend" width="170.5" height="170.5"/>
         <image name="MeAvatar" width="36" height="36"/>
     </resources>
 </document>
